Fix gap below modal on mobile

--- a/src/css/project.css
+++ b/src/css/project.css
@@ -83,7 +83,7 @@
 {
     position: relative;
     width: 100%;
-    height: calc(100vh - 20px);
+    height: calc(100dvh - 20px);
     overflow-y: auto;
     overflow-x: hidden;
     background: #ffffff;
